--- a/compose.yaml
+++ b/compose.yaml
@@ -3,11 +3,42 @@ services:
   pocketid:
     build:
       context: .
+    depends_on:
+      replica1:
+        condition: service_healthy
+      replica2:
+        condition: service_healthy
+    env_file:
+      - replicas.env
     ports:
       - "1411:1411"
     volumes:
       - pocketid:/app/data
 
+  replica1: &replica
+    image: registry.docker.com/bitnami/minio:latest
+    environment:
+      - MINIO_ROOT_USER=keyid
+      - MINIO_ROOT_PASSWORD=secretkey
+      - MINIO_DEFAULT_BUCKETS=mybackup
+      - MINIO_SCHEME=http
+    healthcheck:
+      test: ["CMD", "curl", "-f", "http://localhost:9000/minio/health/live"]
+      interval: 30s
+      timeout: 10s
+      retries: 3
+    volumes:
+      - replica1:/bitnami/minio/data
+
+  replica2:
+    <<: *replica
+    volumes:
+      - replica2:/bitnami/minio/data
+
 volumes:
   pocketid:
+    driver: local
+  replica1:
+    driver: local
+  replica2:
     driver: local
