Adjust details for Fly deployment

--- a/fly.toml
+++ b/fly.toml
@@ -1,15 +1,16 @@
+[build]
+
 [[mounts]]
-source = 'pocketid_data'
-destination = '/app/data'
-initial_size = '1GB'
+  source = 'data'
+  destination = '/app/data'
 
 [http_service]
-internal_port = 1411
-force_https = true
-auto_stop_machines = 'stop'
-auto_start_machines = true
-min_machines_running = 0
-processes = ['app']
+  internal_port = 1411
+  force_https = true
+  auto_stop_machines = 'stop'
+  auto_start_machines = true
+  min_machines_running = 0
+  processes = ['app']
 
 [[vm]]
-size = 'shared-cpu-1x'
+  size = 'shared-cpu-1x'
