Avoid release and tip release to run concurrently

--- a/.github/workflows/release-tip.yml
+++ b/.github/workflows/release-tip.yml
@@ -4,6 +4,8 @@ on:
   push:
     branches:
       - main
+    paths-ignore:
+      - "CHANGELOG.md"
 
 # We must only run one release workflow at a time to prevent corrupting
 # our release artifacts.
