Include changes in release notes

--- a/.changie.yaml
+++ b/.changie.yaml
@@ -3,8 +3,9 @@ unreleasedDir: unreleased
 headerPath: header.tpl.md
 changelogPath: CHANGELOG.md
 versionExt: md
-versionFormat: "## {{.Version}} - {{.Time.Format \"2006-01-02\"}}"
-
+versionFormat: '## {{.Version}} - {{.Time.Format "2006-01-02"}}'
+kindFormat: "### {{.Kind}}"
+changeFormat: "- {{.Body}}"
 kinds:
   - label: Added
     auto: minor
@@ -27,7 +28,7 @@ newlines:
 # Replace version in VERSION file
 replacements:
   - path: VERSION
-    find: '.*'
+    find: ".*"
     replace: "{{.VersionNoPrefix}}"
 
 envPrefix: CHANGIE_
