--- a/.changie.yaml
+++ b/.changie.yaml
@@ -19,9 +19,8 @@ kinds:
     auto: patch
 
 newlines:
-  afterChangelogHeader: 1
+  beforeChangelogVersion: 1
   afterKind: 1
-  afterChangelogVersion: 1
   beforeKind: 1
   endOfVersion: 1
 
