Tags kind of changes for one-liner creation
This way you can create a new changelog entry from the command line:

  $ changie new -k internal -b "Something that changed"

And skips the interactive part.

--- a/.changie.yaml
+++ b/.changie.yaml
@@ -8,14 +8,19 @@ kindFormat: "### {{.Kind}}"
 changeFormat: "- {{.Body}}"
 kinds:
   - label: Added
+    key: added
     auto: minor
   - label: Changed
+    key: changed
     auto: minor
   - label: Fixed
+    key: fixed
     auto: patch
   - label: Security
+    key: security
     auto: patch
   - label: Internal
+    key: internal
     auto: patch
 
 newlines:
