--- a/docs/compose.yaml
+++ b/docs/compose.yaml
@@ -48,7 +48,7 @@ services:
       - pocketid:/app/data
 
   replica1: &replica
-    image: registry.docker.com/bitnami/minio:latest
+    image: registry.docker.com/bitnamilegacy/minio:latest
     environment:
       - MINIO_ROOT_USER=keyid
       - MINIO_ROOT_PASSWORD=secretkey
@@ -60,12 +60,12 @@ services:
       timeout: 10s
       retries: 3
     volumes:
-      - replica1:/bitnami/minio/data
+      - replica1:/bitnamilegacy/minio/data
 
   replica2:
     <<: *replica
     volumes:
-      - replica2:/bitnami/minio/data
+      - replica2:/bitnamilegacy/minio/data
 
 volumes:
   pocketid:
